# codespace-learning

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
codespace_learning/: __init__.py  app.py  app_simple.py  calculator.py  main.py
codespace_learning/api/: calculator_endpoints.py
codespace_learning/database/: connection.py
codespace_learning/models/: calculation.py
scripts/: check_devcontainer.sh  start_api.sh  start_simple_api.sh
src/: __init__.py  app.py  calculator.py  main.py
src/api/: calculator_endpoints.py
src/database/: connection.py
src/models/: calculation.py  schemas.py
tests/: test_api.py  test_calculator.py
