[project]
name = "codespace-learning"
version = "0.2.0"
description = "Calculator API with PostgreSQL for learning GitHub Codespaces and DevContainers"
authors = [{name = "Deepak", email = "deepak@example.com"}]
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
calculator = "src.main:main"
start-api = "scripts.start_api:main"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"